Fixed chat message ui overflow, added hashrouter to help server track user

--- a/src/components/Chat/Chat.css
+++ b/src/components/Chat/Chat.css
@@ -12,6 +12,7 @@
   display: grid;
   grid-template-columns: 20% 80%;
   align-items: center;
+  overflow-y: hidden;
 }
 
 .banner {
